<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/home2"
              android:orientation="vertical"
              tools:context=".LoginActivity">

  <RelativeLayout
      android:id="@+id/topBar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_top_bar"
      android:layout_alignParentTop="true">

    <ImageButton
        android:id="@+id/btnBack"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:src="@drawable/left"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/btnBack"
        android:text="账号注册"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
  </RelativeLayout>

  <Button
      android:id="@+id/btnLoginIn"
      style="?android:borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="right"
      android:onClick="onClick"
      android:text="登录"
      android:textColor="@android:color/white"
      />

  <LinearLayout
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btnLoginUp"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="horizontal"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/user_png_24px"
      />

  <EditText
      android:id="@+id/txtUsername"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_username"
      />

</LinearLayout>

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lock_24px"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/txtPassword"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/height_margin_top"
          android:hint="@string/hint_password"
          android:inputType="textPassword"/>

      <ImageButton
          android:id="@+id/imgPassword"
          style="@style/Base.Widget.AppCompat.Button.Borderless"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:onClick="onClick"
          android:layout_gravity="right"
          android:src="@drawable/amg"/>
    </FrameLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_png_24px"
        />

    <EditText
        android:id="@+id/txtRealName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_realname"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="5dp"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/phone_24px"
        />

    <EditText
        android:id="@+id/txtTel"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tel"
        android:inputType="phone"
        />

  </LinearLayout>

  <!--LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/birthday_24px"
        />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_age"
        />

  </LinearLayout-->

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/gender"
        />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <RadioButton
          android:id="@+id/rbMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="男"/>

      <RadioButton
          android:id="@+id/rbFemale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="false"
          android:text="女"/>
    </RadioGroup>


  </LinearLayout>

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/imgQue"
          android:layout_centerVertical="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/question"
          />
      <Spinner
          android:id="@+id/spinnerQue"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:entries="@array/questions"
          android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/queLinear"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">
    <ImageView
        android:id="@+id/imgQue2"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/question"
        />

    <EditText
        android:id="@+id/txtQuestion"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_question"/>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/answer"
        />

    <EditText
        android:id="@+id/txtAnswer"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_answer"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/btn_login_up"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/height_margin_top"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"
        android:text="注册"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
  </LinearLayout>

</LinearLayout>
