<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.com.changyou.BookedActivity">

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorPrimary"
        />
  </android.support.design.widget.AppBarLayout>

  <LinearLayout
      android:id="@+id/tvLinear"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/appbar"
      android:orientation="vertical"
      >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="请完善申请资料"
      android:textColor="@color/colorPrimary"
      android:textSize="25dp"
      />

  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        >

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/user_png_24px"
          />

      <EditText
          android:id="@+id/txtRealName"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:hint="@string/hint_realname"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        >

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/phone_24px"
          />

      <EditText
          android:id="@+id/txtTel"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:hint="@string/hint_tel"
          android:inputType="phone"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        >

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/user_png_24px"
          />

      <EditText
          android:id="@+id/txtNum"
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:hint="@string/hint_num"
          android:inputType="number"
          />

    </LinearLayout>

  </LinearLayout>





  <LinearLayout
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="5dp"
      android:background="@android:color/white"
      android:gravity="center"
      android:orientation="vertical"
      >

    </LinearLayout>
      <LinearLayout
          android:layout_width="320dp"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center"
          android:layout_marginTop="10dp"
          android:background="@android:color/white"
          >

          <Button
              android:id="@+id/btnStartDate"
              style="@style/Base.Widget.AppCompat.Button.Borderless"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:text="起租日期"
              android:onClick="onClick"
              android:layout_marginLeft="40dp"
              />

          <Button
              android:id="@+id/btnEndDate"
              style="@style/Base.Widget.AppCompat.Button.Borderless"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:layout_marginLeft="70dp"
              android:onClick="onClick"
              android:text="结束日期"
              />

      </LinearLayout>

      <LinearLayout
          android:layout_width="320dp"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center"
          android:gravity="center"
          android:background="@android:color/white"
          >

          <TextView
              android:id="@+id/tvStartDate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:textAppearance="?android:textAppearance"
              android:textSize="20dp"
              />

          <TextView
              android:id="@+id/tvEndDate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center"
              android:textAppearance="?android:textAppearance"
              android:textSize="20dp"
              />


      </LinearLayout>
  </LinearLayout>
    <Button
        android:id="@+id/btnBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="确认提交"
        android:onClick="onClick"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
